k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-deployment
  namespace: chat-dev
  labels:
    app: chat-app
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
      env: dev
  template:
    metadata:
      labels:
        app: chat-app
        env: dev
    spec:
      containers:
      - name: chat-app
        image: chat-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
