k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-service
  namespace: chat-dev
  labels:
    app: chat-app
    env: dev
spec:
  type: ClusterIP
  selector:
    app: chat-app
    env: dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
